Week 4 Assignment RMD

--- a/Week4-Spatial/spatial_assignment.Rmd
+++ b/Week4-Spatial/spatial_assignment.Rmd
@@ -39,6 +39,7 @@ In the R code chunk below, provide the code to:
 ```{r, results = 'hide'}
 rm(list=ls())
 getwd()
+setwd("C:/Users/Savannah/GitHub/QB2017_Bennett/Week4-Spatial")
 
 
 ```
@@ -51,44 +52,34 @@ In the R code chunk below, do the following:
 
 ```{r, results = 'hide', message = FALSE, warning = FALSE} 
 
-install.packages('vegan')
 require(vegan)
 
 # Classes and methods for handling spatial data
-install.packages('sp')
 require(sp)
 
 # Methods for geostatistical analyses
-install.packages('gstat')
 require(gstat)
 
 # Methods to create a RasterLayer object 
-install.packages('raster')
 require(raster)
 
 # For querying the Google server for static maps. 
-install.packages('RgoogleMaps')
 require(RgoogleMaps)
 
 # Tools for manipulating and reading geospatial data 
-install.packages('maptools')
 require(maptools)
 
 # Geospatial Data Abstraction Library
-install.packages('rgdal')
 require(rgdal)
 
 # Similarity measures for community data
-install.packages('simba')
 require(simba)
 
 # Programming tools for plotting data
-install.packages('gplots')
 require(gplots)
 
 
 # Geostatistical package, used here for semivariograms 
-install.packages('rgeos')
 require(rgeos)
 
 
@@ -117,6 +108,11 @@ otu.names <- names(OTUs) # Get the names of the OTUs
 
 OTUs <- as.data.frame(OTUs[-1]) # remove first column (site names)
 
+rich <- specnumber(OTUs)
+
+max(rich)
+
+
 
 ```
 
@@ -124,9 +120,9 @@ OTUs <- as.data.frame(OTUs[-1]) # remove first column (site names)
 
 > ***Answer 2a***:  There are 51 sites, and a total of 16,383 OTUs observed, which comprised of 100 different OTUs in this dataset. 
 
-***Question 2b***:  What is the greatest species richness found among sites?
+***Question 2b***: What is the greatest species richness found among sites?
 
-> ***Answer 2b***:  
+> ***Answer 2b***: The highest richness is 3659 OTUs. 
 
 
 ## 4) GENERATE MAPS
@@ -153,7 +149,7 @@ PlotOnStaticMap(newmap, lats, lons, cex = 1, pch = 20, col = 'red', add = TRUE)
 
 ***Question 3***:  Briefly describe the geographical layout of our sites.
 
-> ***Answer 3***: According to this map, the sampling sites are clustered into about five groups. It seems like three of those clusters are around Lake Monroe.
+> ***Answer 3***: According to this map, the sampling sites are clustered into about five groups. It seems like three of those clusters are around Lake Monroe.The other two clusters are located west of Lake Monroe. 
 
 
 In the R code chunk below, do the following:  
@@ -187,7 +183,7 @@ plot(Refuge.Ponds, line='r', col='red', pch = 20, cex = 1.5, add = TRUE)
 
 ***Question 5***: In your own words, explain the concept of spatial autocorrelation.
 
-> ***Answer 5***:
+> ***Answer 5***:Spatial autocorrelation refers to how points can be grouped together or dispersed from each other, which depicts biodiversity over spatial scales. Its is used to determine whether differences in biodiversity among separate areas is due to geographic separation. 
 
 
 ## 6) EXAMINING DISTANCE-DECAY
@@ -234,19 +230,84 @@ xy$lons_utm <- UTM[,3] # longitude data according to UTM
 env.vgm <- variogram(env~1, data=xy) 
 plot(env.vgm)
 
+
+
 ```
+
+```{r}
+#Moran's I
+
+Moran(Tree.Cover)
+
+TC.Moran <- MoranLocal(Tree.Cover)
+
+plot(TC.Moran,xlab="Longitude",ylab="Latitude",
+main="Spatial autocorrelation in % tree cover\nacross our sampled landscape",
+col=rainbow(11,alpha=1))
+```
+```{r}
+#Distance-decay Relationship
+
+comm.dist <-1- vegdist(OTUs) # Bray-Curtis similarity between the plots
+
+lats <- as.numeric(xy$lats_utm) # lattitude data
+lons <- as.numeric(xy$lons_utm) # longitude data
+coord.dist <- dist(as.matrix(lats, lons)) # geographical distance between plots
+
+# transform environmental data to numeric types
+x1 <- as.numeric(Ponds$"SpC")
+# calculate the distance (Euclidean) between the plots regarding environmental variables
+env.dist <- vegdist(x1,"euclidean") # using the vegdist function in vegan
+
+# transform all distance matrices into database format using the liste function in simba:
+comm.dist.ls <- liste(comm.dist,entry="comm")
+env.dist.ls <- liste(env.dist,entry="env")
+coord.dist.ls <- liste(coord.dist,entry="dist")
+
+#Now, create a data frame containing similarity of the environment and similarity of community.
+df <- data.frame(coord.dist.ls, env.dist.ls[,3], comm.dist.ls[,3])
+
+names(df)[4:5] <- c("env","struc")
+
+attach(df)
+
+#Finally, let's plot the Distance-decay relationships, with regression lines in red.
+par(mfrow=c(1,2),pty="s")
+plot(env, struc,xlab="Environmental Distance",ylab="1 - Bray-Curtis",
+main ="Environment",col='SteelBlue')
+
+OLS <- lm(struc ~env)
+
+OLS # print regression results to the screen
+
+abline(OLS,col="red4")
+
+plot(dist, struc,xlab="Geographic Distance",ylab="1 - Bray-Curtis",
+main="Community\nComposition",col='darkorchid4')
+
+OLS <- lm(struc ~dist)
+
+OLS # print regression results to the screen
+
+abline(OLS,col="red4")
+
+diffslope(env, struc, dist, struc) # a function in simba that calculates the difference in slope or intercept 
+
+
+```
+
 
 
 ***Question 7***: What can you conclude about community similarity with regars to environmental distance and geographic distance?
 
-> ***Answer 7***: 
+> ***Answer 7***: Community similarity appears to decrease with environmental distance, and increase with geographic distance. Therefore, community similarity is higher with lower environmental distance, and greater geographic distance. The slope of the regression lines for environmental and geographic distances were significantly different as well (p=0.001).  
 
 
 ## 7) EXAMINING SPECIES SPATIAL ABUNDANCE DISTRIBUTIONS
 
 ***Question 8***: In your own words, explain the species spatial abundance distribution and what it reveals.
 
-> ***Answer 8***:
+> ***Answer 8***: Spatial abundance distribution shows how species are distributed across a particular site or geographic location. It shows how abundant certain species are in a specific area. Spatial abundance distributions can show the distribution of all species, or specific species of interest. 
 
 
 In the R code chunk below, do the following: 
@@ -256,12 +317,37 @@ In the R code chunk below, do the following:
 
 ```{r}
 # 1. Define an SSAD function
-
 # 2. Set plot parameters
-
 # 3. Declare a counter variable
-
 # 4. Write a while loop to plot the SSADs of six species chosen at random 
+
+siteN <- rowSums(OTUs) # Abundances in each plot
+siteN
+
+par(mfrow=c(1,1),pty="s")
+plot(density(siteN),col = 'magenta',xlab='Site abundance',
+ylab='Probability Density',main = 'IN Ponds\nabundance distribution')
+
+ssad <-function(x){
+ad <- c(2,3)
+ad <-OTUs[, otu]
+ad = as.vector(t(x =ad))
+ad =ad[ad >0]
+}
+
+par(mfrow=c(2,3))
+
+ct <-0 # a counter variable
+while (ct <6){# While the ct variable is less than 4, do ...
+otu <- sample(1:length(OTUs),1) # choose 1 random OTU (i.e., a random column of the site-by-species matrix)
+ad <- ssad(otu) # find the OTU's SSAD
+if (length(ad) >10& sum(ad >100)){ # if the species is present in at least 10 sites and has an overall 
+ct <-ct +1
+plot(density(ad),col = 'red',xlab='Site abundance',
+ylab='Probability Density',main =otu.names[otu])
+}
+}
+
 
 ```
 
@@ -271,14 +357,14 @@ Many patterns of biodiversity relate to spatial scale.
 
 ***Question 9***:  List, describe, and give examples of the two main aspects of spatial scale
 
-> ***Answer 9***: 
+> ***Answer 9***: The two main aspects of spatial scale are extent and grain. Extent is the greatest distance/area used in a study, whereas grain refers to the smallest unit of distance measured in a study. An example of extent would be a study site with an area of 50ha, and an example of grain would be a study that used multiple plots, each being 1ha. 
 
 
 ## 9) CONSTRUCTING THE SPECIES-AREA RELATIONSHIP
 
 ***Question 10***: In your own words, describe the species-area relationship.
 
-> ***Answer 10***: 
+> ***Answer 10***: The species-area relationship shows how often a specific species will be found as the sampling area increases. 
 
 
 In the R code chunk below, provide the code to: 
@@ -287,8 +373,32 @@ In the R code chunk below, provide the code to:
 
 ```{r, results = 'hide', message = FALSE, warning = FALSE}
 # 1. Declare variables to hold simulated community and species information 
-
 # 2. Populate the simulated landscape
+
+community <- c() # an initiall empty community
+species <- c() # with zero species
+
+# initiate the plot, i.e., landscape
+plot(0,0,col='white',xlim = c(0,100),ylim = c(0,100),
+xlab='x coordinate',ylab='y coordinate',
+main='A simulated landscape occupied by 100
+species, having 1 to 1000 individuals each.')
+
+while (length(community) <100){ # while the community has less than 100 species
+# choose the mean, standard deviation, and species color at random
+std <- runif(1,1,10) # random sample from a uniform distribution
+ab <- sample(1000,1) # random number between 1 and 1000
+x <- rnorm(ab,mean = runif(1,0,100),sd =std) # 1000 random numbers from a Normal distribution
+y <- rnorm(ab,mean = runif(1,0,100),sd =std) # 1000 random numbers from a Normal distribution
+color <- c(rgb(runif(1),runif(1),runif(1))) # Let each species have a randomly chosen color
+
+points(x, y,pch=".",col=color) # Add points to a plot
+species <- list(x, y, color) # The species color, x-coords, and y-coords
+community[[length(community)+1]] <-species # Add the species info to the community
+}
+
+
+
 
 
 ```
@@ -300,10 +410,34 @@ While consult the handout for assistance, in the R chunk below, provide the code
 
 ```{r}
 # 1. Declare the spatial extent and lists to hold species richness and area data
-
 # 2. Construct a 'while' loop and 'for' loop combination to quantify the numbers of species for progressively larger areas of the simulated landscape.
-
 # 3. Be sure to log10-transform the richness and area data
+
+lim <-10 # smallest spatial extent. This also equals the spatial grain.
+S.list <- c() # holds the number of species
+A.list <- c() # holds the spatial scales
+
+while (lim <=100){ # while the spatial extent is less than or equal to 100...
+  S <-0 # initiate richness at zero
+  for (sp in community){ # for each species in the community
+    xs <-sp[[1]] # assign the x coordinates
+    ys <-sp[[2]] # assign the y coordinates
+    sp.name <-sp[[3]] # assign the species name
+    xy.coords <- cbind(xs, ys) # combine the columns for x and y coordinates
+    for (xy in xy.coords){ # for each pair of xy coordinates
+      if (max(xy) <=lim){ # if the individual is within our current spatial extent...
+        S <-S +1 # then the species occurs there
+        break
+        }
+      }
+  }
+   # break out of the last for loop because we now know the species occurs inside our samplign }
+  S.list <- c(S.list, log10(S))
+  A.list <- c(A.list, log10(lim^2))
+  lim <-lim *2 # increase the extent multiplicatively
+}
+
+
 ```
 
 
@@ -315,17 +449,69 @@ In the R code chunk below, provide the code to:
 
 ```{r, results = 'hide', message = FALSE, warning = FALSE}
 
+results <- lm(S.list ~A.list)
+plot(A.list, S.list,col="dark red",pch=20,cex=2, 
+     main="Species-area relationship", 
+     xlab='ln(Area)',ylab='ln(Richness)')
+
+abline(results,col="red",lwd=2)
+
+int <- round(results[[1]][[1]],2)
+
+z <- round(results[[1]][[2]],2)
+legend(x=2,y=2, paste(c('slope = ', z),collapse =" "),cex=0.8,
+box.lty=0)
+
 ```
 
 
 ***Question 10a***: Describe how richness relates to area in our simulated data by interpreting the slope of the SAR.
 
-> ***Answer 10a***: 
+> ***Answer 10a***: The slope of the SAR in our simulated model is 0.19, which shows you the degree to which richness will increase with area. It allows you to determine how much richness will increase as area increases. 
 
 ***Question 10b***: What does the y-intercept of the SAR represent?
 
-> ***Answer 10b***: 
+> ***Answer 10b***: The y-intercept of the SAR would represent the richness value at the smallest area unit in the study. It would have the smallest richness value as well.
 
 
 ## SYNTHESIS
 Load the dataset you are using for your project. Plot and discuss either the geogrpahic Distance-Decay relationship, the SSADs for at least four species, or any variant of the SAR (e.g., random accumulation of plots or areas, accumulation of contiguous plots or areas, nested design).
+
+```{r}
+#Spatial Abundance Distribution 
+fungi.data <- read.csv("finalprojectdata1csv.csv", sep = ",", header = TRUE)
+fungi.data <- fungi.data[,-1]
+
+siteN1 <- rowSums(fungi.data) # Abundances in each plot
+siteN1
+
+par(mfrow=c(1,1),pty="s")
+plot(density(siteN1),col = 'magenta',xlab='Site abundance',
+ylab='Probability Density',main = 'Fungal OTU\nabundance distribution')
+
+
+
+ssad1 <-function(x){
+ad <- c(2,3)
+ad <-fungi.data
+ad = as.vector(t(x =ad))
+ad =ad[ad >0]
+}
+
+par(mfrow=c(2,6))
+
+ct <-0 # a counter variable
+while (ct <12){# While the ct variable is less than 4, do ...
+fungi.otu <- sample(1:length(fungi.data),1) # choose 1 random OTU (i.e., a random column of the site-by-species matrix)
+ad <- ssad(fungal.otu) # find the OTU's SSAD
+if (length(ad) >10& sum(ad >100)){ # if the species is present in at least 10 sites and has an overall 
+ct <-ct +1
+plot(density(ad),col = 'red',xlab='Site abundance',
+ylab='Probability Density',main =fungi.otu)
+}
+}
+
+
+```
+
+> The species spatial distribution curve with all OTUs from our data set is not very helpful because the data is presesnted as relative abundances. Therefore, all of the x-axis values are 1. I also selected various random OTUs from the dataset, an dplotted their spatial distribution curves. All of the OTUs that I randomly sampled seem to be have a higher probability of being sampled when total site abundance is relatively low (50-100). This might indicate that these OTUs are relatively rare.  
