--- a/Week5-Temporal/temporal_assignment.Rmd
+++ b/Week5-Temporal/temporal_assignment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment: Temporal Diversity"
-author: "Student Name; Z620: Quantitative Biodiversity, Indiana University"
+author: "Savannah Bennett; Z620: Quantitative Biodiversity, Indiana University"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 geometry: margin=2.54cm
@@ -41,6 +41,8 @@ In the R code chunk below, provide the code to:
 4. load any packages you need to complete the assignment.
 
 ```{r}
+rm(list=ls())
+getwd()
 
 
 
@@ -55,9 +57,20 @@ In the R code chunk below, do the following:
 2. explore the structure of the dataset.
 
 ```{r}
+package.list <- c('vegan', 'tidyr', 'dplyr', 'codyn', 'ggplot2',
+'cowplot', 'MullerPlot', 'RColorBrewer', 'reshape2', 'lubridate',
+'TTR', 'xtable', 'multcomp', 'pander', 'png', 'grid', 'tseries', 'nlme', 'forecast', 'lsmeans')
 
+for (package in package.list) {
+  if (!require(package, character.only = TRUE, quietly = TRUE)) {
+    install.packages(package,repos='http://cran.us.r-project.org')
+    library(package, character.only = TRUE) 
+  }
+}
 
+portal <- read.table("data/combined.csv", sep = ",", header = TRUE)
 
+str(portal)
 
 ```
 
@@ -66,8 +79,8 @@ In the R code chunk below, do the following:
 a.  How many plots are in `portal`?
 b.  How many rodent species are there in the `portal` dataset?
 
-> ***Answer 1a***:  
-> ***Answer 1b***:  
+> ***Answer 1a***:  There are twenty four plots in this dataset. 
+> ***Answer 1b***:  There are forty eight species in the 'portal' dataset. 
 
 ## 3) WRANGLING THE PORTAL DATASET
 
@@ -80,6 +93,16 @@ In the R code chunk below, do the following:
 5. Using the hypothesis testing tools you learned in the beta-diversity module, test the hypothesis that species abundances across sites vary as a factor of treatment type (i.e., plot_type). 
 
 ```{r}
+#Site by species matrix
+time.by.species <- group_by(portal, year, plot_id) %>% count(species_id) %>% spread(key = species_id, value = n, fill = 0)
+
+dplyr:: filter(time.by.species, year == 1984)
+
+#Vector of plot_type
+
+
+
+
 
 ```
 
@@ -102,6 +125,14 @@ In the R code chunk below, do the following:
 6. Use the tools outlined in the Handout to create an ARMA model.
 
 ```{r}
+# Make a date vector that contains year, month, and day
+portal <- unite(portal, col = date, c(year, month, day), sep = "-", remove = FALSE)
+
+# Make a taxon vector that contains genus and species names
+portal <- unite(portal, col = taxon, c(genus, species), sep = "_", remove = FALSE)
+
+
+
 
 ```
 
